--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
-    <div style="max-width: 90%;">
+    <div class="matrix-effect">
         <p>JoinStack - Coming soon</p>
     </div>
     <script src="js/main.js"></script>
