started work on footer

--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 </head>
 <body>
     <div class="matrix-effect">
-        <p>JoinStack - Coming soon</p>
+        <p class=matrix-ad>JoinStack - Coming soon</p>
     </div>
+    
+    <footer class="footer">
+        <nav class="footer_nav">
+                <section class="footer_intro"></section>
+                <p class="logo_footer">JoinStack</p>
+                <p class="footer_slogan">Developing software that matters</p>
+            </section>
+        </nav>   
+    </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
