Added legal mark

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     
     <footer class="footer">
         <nav class="footer_nav">
-                <section class="footer_intro"></section>
-                <p class="logo_footer">JoinStack</p>
-                <p class="footer_slogan">Developing software that matters</p>
+            <section class="footer_intro"></section>
+            <p class="logo_footer">JoinStack</p>
+            <p class="footer_slogan">Developing software that matters</p>
             </section>
+            <small class="footer_legal">© 2018 JoinStack. All Rights Reserved.</small>
         </nav>   
     </footer>
     <script src="js/main.js"></script>
