--- a/index.html
+++ b/index.html
@@ -15,9 +15,28 @@
     
     <footer class="footer">
         <nav class="footer_nav">
-            <section class="footer_intro"></section>
+            <section class="footer_intro">
             <p class="logo_footer">JoinStack</p>
             <p class="footer_slogan">Developing software that matters</p>
+            </section>
+            <section class="footer_col">
+                <div class="footer_explore">
+                    <h4 class="footer_col-title">Explore</h4>
+                    <div class="footer_nav-list">
+                        <a href="/" class="footer_link" data-footer-link="1">Home</a>
+                        <a href="/" class="footer_link" data-footer-link="2">About</a>
+                        <a href="/" class="footer_link" data-footer-link="3">Blog</a>
+                        <a href="/" class="footer_link" data-footer-link="4">Careers</a>
+                     </div>
+                </div>
+            </section>
+            <section class="footer_col">
+                <div class="footer_col-wrap">
+                    <h4 class="footer_col-title">Follow</h4>
+                    <a href="/" target="_blank" class="footer_link">LinkedIn</a>
+                    <a href="/" target="_blank" class="footer_link">Instagram</a>
+                    <a href="/" target="_blank" class="footer_link">Github</a>
+                </div>
             </section>
             <small class="footer_legal">© 2018 JoinStack. All Rights Reserved.</small>
         </nav>   
