added some corrections - footer

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     
     <footer class="footer">
         <nav class="footer_nav">
-            <section class="footer_intro">
-            <p class="logo_footer">JoinStack</p>
+            <section class="footer_col footer_col-intro">
+            <h3 class="logo_footer">JoinStack</h3>
             <p class="footer_slogan">Developing software that matters</p>
             </section>
             <section class="footer_col">
