Adding Coming soon page and redirect for linkedin link

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="matrix-effect">
-        <p class=matrix-ad>JoinStack - Coming soon</p>
+        <p class=matrix-ad>Coming soon</p>
     </div>
     
     <footer class="footer">
@@ -23,10 +23,10 @@
                 <div class="footer_explore">
                     <h4 class="footer_col-title">Explore</h4>
                     <div class="footer_nav-list">
-                        <a href="#" class="footer_link" data-footer-link="1">Home</a>
-                        <a href="coming-soon.html" class="footer_link" data-footer-link="2">About</a>
-                        <a href="coming-soon.html" class="footer_link" data-footer-link="3">Blog</a>
-                        <a href="coming-soon.html" class="footer_link" data-footer-link="4">Careers</a>
+                        <a href="index.html" class="footer_link" data-footer-link="1">Home</a>
+                        <a href="#" class="footer_link" data-footer-link="2">About</a>
+                        <a href="#" class="footer_link" data-footer-link="3">Blog</a>
+                        <a href="#" class="footer_link" data-footer-link="4">Careers</a>
                      </div>
                 </div>
             </section>
