--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="footer_col-wrap">
                     <h4 class="footer_col-title">Follow</h4>
                     <a href="https://www.linkedin.com/company/joinstack/" target="_blank" class="footer_link">LinkedIn</a>
-                    <a href="/" target="_blank" class="footer_link">Instagram</a>
+                    <a href="https://www.instagram.com/joinstack_/" target="_blank" class="footer_link">Instagram</a>
                     <a href="https://github.com/joinstack" target="_blank" class="footer_link">Github</a>
                 </div>
             </section>
