--- a/index.html
+++ b/index.html
@@ -11,10 +11,31 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        <nav>
+            <input type="checkbox" id="nav" class="hidden">
+            <label for="nav" class="nav-btn">
+                    <i></i>
+                    <i></i>
+                    <i></i>
+            </label>
+            <div class="logo">
+                <a href="#">JOINSTACK</a>
+            </div>
+            <div class="nav-wrapper">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="coming-soon.html">About</a></li>
+                    <li><a href="coming-soon.html">Blog</a></li>
+                    <li><a href="coming-soon.html">Careers</a></li>
+                </ul>
+            </div>
+            
+        </nav>
+    </div>
     <div class="matrix-effect">
         <p class=matrix-ad>JoinStack - Coming soon</p>
     </div>
-    
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
