Adding redirect for home page

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -24,10 +24,10 @@
                     </div>
                     <div class="nav-wrapper">
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="coming-soon.html">About</a></li>
-                            <li><a href="coming-soon.html">Blog</a></li>
-                            <li><a href="coming-soon.html">Careers</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Careers</a></li>
                         </ul>
                     </div>
                     
