--- a/coming-soon.html
+++ b/coming-soon.html
@@ -25,9 +25,9 @@
                     <div class="nav-wrapper">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Careers</a></li>
+                            <li><a href="coming-soon.html">About</a></li>
+                            <li><a href="coming-soon.html">Blog</a></li>
+                            <li><a href="coming-soon.html">Careers</a></li>
                         </ul>
                     </div>
                     
@@ -48,9 +48,9 @@
                     <h4 class="footer_col-title">Explore</h4>
                     <div class="footer_nav-list">
                         <a href="index.html" class="footer_link" data-footer-link="1">Home</a>
-                        <a href="#" class="footer_link" data-footer-link="2">About</a>
-                        <a href="#" class="footer_link" data-footer-link="3">Blog</a>
-                        <a href="#" class="footer_link" data-footer-link="4">Careers</a>
+                        <a href="coming-soon.html" class="footer_link" data-footer-link="2">About</a>
+                        <a href="coming-soon.html" class="footer_link" data-footer-link="3">Blog</a>
+                        <a href="coming-soon.html" class="footer_link" data-footer-link="4">Careers</a>
                      </div>
                 </div>
             </section>
