--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="nav-wrapper">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="coming-soon.html">About</a></li>
                     <li><a href="coming-soon.html">Blog</a></li>
                     <li><a href="coming-soon.html">Careers</a></li>
@@ -46,7 +46,7 @@
                 <div class="footer_explore">
                     <h4 class="footer_col-title">Explore</h4>
                     <div class="footer_nav-list">
-                        <a href="#" class="footer_link" data-footer-link="1">Home</a>
+                        <a href="index.html" class="footer_link" data-footer-link="1">Home</a>
                         <a href="coming-soon.html" class="footer_link" data-footer-link="2">About</a>
                         <a href="coming-soon.html" class="footer_link" data-footer-link="3">Blog</a>
                         <a href="coming-soon.html" class="footer_link" data-footer-link="4">Careers</a>
