Change in link name

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -27,7 +27,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="coming-soon.html">About</a></li>
                             <li><a href="coming-soon.html">Blog</a></li>
-                            <li><a href="coming-soon.html">Careers</a></li>
+                            <li><a href="coming-soon.html">Contact Us</a></li>
                         </ul>
                     </div>
                     
@@ -50,7 +50,7 @@
                         <a href="index.html" class="footer_link" data-footer-link="1">Home</a>
                         <a href="coming-soon.html" class="footer_link" data-footer-link="2">About</a>
                         <a href="coming-soon.html" class="footer_link" data-footer-link="3">Blog</a>
-                        <a href="coming-soon.html" class="footer_link" data-footer-link="4">Careers</a>
+                        <a href="coming-soon.html" class="footer_link" data-footer-link="4">Contact Us</a>
                      </div>
                 </div>
             </section>
