Add part of the contact page

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -27,7 +27,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="coming-soon.html">About</a></li>
                             <li><a href="coming-soon.html">Blog</a></li>
-                            <li><a href="coming-soon.html">Contact Us</a></li>
+                            <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
                     </div>
                     
@@ -50,7 +50,7 @@
                         <a href="index.html" class="footer_link" data-footer-link="1">Home</a>
                         <a href="coming-soon.html" class="footer_link" data-footer-link="2">About</a>
                         <a href="coming-soon.html" class="footer_link" data-footer-link="3">Blog</a>
-                        <a href="coming-soon.html" class="footer_link" data-footer-link="4">Contact Us</a>
+                        <a href="contact-us.html" class="footer_link" data-footer-link="4">Contact Us</a>
                      </div>
                 </div>
             </section>
@@ -62,7 +62,7 @@
                     <a href="https://github.com/joinstack" target="_blank" class="footer_link">Github</a>
                 </div>
             </section>
-            <small class="footer_legal">© 2018 JoinStack. All Rights Reserved.</small>
+            <small class="footer_legal">© 2018 JoinStack.</small>
         </nav>   
     </footer>
     <script src="js/main.js"></script>
