About page - first commit

--- a/about.html
+++ b/about.html
@@ -34,8 +34,7 @@
                 </nav>
             </div>
     <div class="contact-container">
-        <h2>We help brands all over the world to create products that matter.</h2>
-        <p>Let's chat about your next project.</p>
+        <h2>Let me tell you a story</h2>   
     </div>
     
     <footer class="footer">
@@ -66,6 +65,6 @@
             <small class="footer_legal">© 2018 JoinStack.</small>
         </nav>   
     </footer>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
