--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="nav-wrapper">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="coming-soon.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="coming-soon.html">Blog</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
@@ -47,7 +47,7 @@
                     <h4 class="footer_col-title">Explore</h4>
                     <div class="footer_nav-list">
                         <a href="index.html" class="footer_link" data-footer-link="1">Home</a>
-                        <a href="coming-soon.html" class="footer_link" data-footer-link="2">About</a>
+                        <a href="about.html" class="footer_link" data-footer-link="2">About</a>
                         <a href="coming-soon.html" class="footer_link" data-footer-link="3">Blog</a>
                         <a href="contact-us.html" class="footer_link" data-footer-link="4">Contact Us</a>
                      </div>
