--- a/coming-soon.html
+++ b/coming-soon.html
@@ -41,7 +41,7 @@
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
             <h3 class="logo_footer">JoinStack</h3>
-            <p class="footer_slogan">Developing software that matters</p>
+            <p class="footer_slogan">We help brands all over the world to create impressive products.</p>
             </section>
             <section class="footer_col">
                 <div class="footer_explore">
