--- a/contact-us.html
+++ b/contact-us.html
@@ -34,7 +34,7 @@
                 </nav>
             </div>
     <div class="contact-container">
-        <h2>We help brands all over the world to create products that matter.</h2>
+        <h2>We help brands all over the world to create impressive products.</h2>
         <p>Let's chat about your next project.</p>
     </div>
     
@@ -42,7 +42,7 @@
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
             <h3 class="logo_footer">JoinStack</h3>
-            <p class="footer_slogan">Developing software that matters</p>
+            <p class="footer_slogan">We help brands all over the world to create impressive products.</p>
             </section>
             <section class="footer_col">
                 <div class="footer_explore">
