Change of the matrix effect text in main page
I've added rule to make it responsive

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
     </div>
     <div class="matrix-effect">
-        <p class=matrix-ad>JoinStack - Coming soon</p>
+        <p class=matrix-ad>Creating impressive products</p>
     </div>
     <footer class="footer">
         <nav class="footer_nav">
