Add text for about page, typewriter effect

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <div class="contact-container">
         <h2>Let me tell you a story</h2>   
     </div>
-    
+    <div id="typedtext"></div> 
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
@@ -65,6 +65,7 @@
             <small class="footer_legal">© 2018 JoinStack.</small>
         </nav>   
     </footer>
+    <script src="js/about.js"></script>
     <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
