Typewriter effect - main page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
         </nav>
     </div>
     <div class="matrix-effect">
-        <p class=matrix-ad>Creating impressive products</p>
+            <h1>
+                    <a href="" class="typewrite" data-period="2000" data-type='[ "JoinStack - A software company", "Creating impressive products.", "We bring designs to life.", "You name it, we make it." ]'>
+                      <span class="wrap"></span>
+                    </a>
+            </h1>    
     </div>
     <footer class="footer">
         <nav class="footer_nav">
@@ -64,6 +68,6 @@
             <small class="footer_legal">© 2018 JoinStack.</small>
         </nav>   
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/typewriter.js"></script>
 </body>
 </html>
