Adding language spec for html

--- a/contact-us.html
+++ b/contact-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +37,6 @@
         <h2>We help brands all over the world to create impressive products.</h2>
         <p>Let's chat about your next project.</p>
     </div>
-    
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
