Added services page

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                     
                 </nav>
             </div>
-    <div class="contact-container">
+    <div class="content-container">
         <h2>Let me tell you a story</h2>   
     </div>
     <div id="typedtext"></div> 
