--- a/services.html
+++ b/services.html
@@ -32,10 +32,10 @@
                     
                 </nav>
             </div>
-    <div class="content-container">
-        <h2>We help brands all over the world to create impressive products.</h2>
-        <p>Let's chat about your next project.</p>
-    </div>
+            <div class="content-container">
+                <h2>Our services</h2>
+            </div>
+    
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
@@ -57,13 +57,12 @@
                 <div class="footer_col-wrap">
                     <h4 class="footer_col-title">Follow</h4>
                     <a href="https://www.linkedin.com/company/joinstack/" target="_blank" class="footer_link">LinkedIn</a>
-                    <a href="https://www.instagram.com/joinstack_/" target="_blank" class="footer_link">Instagram</a>
+                    <a href="https://www.instagram.com/wearejoinstack/" target="_blank" class="footer_link">Instagram</a>
                     <a href="https://github.com/joinstack" target="_blank" class="footer_link">Github</a>
                 </div>
             </section>
             <small class="footer_legal">© 2018 JoinStack.</small>
         </nav>   
     </footer>
-    <script src="js/main.js"></script>
 </body>
 </html>
