Container in main-page should include the typewritter effect also

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="container main-page">
         <nav>
             <input type="checkbox" id="nav" class="hidden">
             <label for="nav" class="nav-btn">
@@ -36,7 +36,6 @@
             </div>
             
         </nav>
-    </div>
     <div class="matrix-effect">
             <h1>
                     <a href="" class="typewrite" data-period="2000" data-type='[ "JoinStack - A software company", "Creating impressive products.", "We bring designs to life.", "You name it, we make it." ]'>
@@ -44,6 +43,7 @@
                     </a>
             </h1>    
     </div>
+</div>
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
