Add Services link to nav and footer

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="coming-soon.html">Blog</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
@@ -56,8 +57,9 @@
                     <div class="footer_nav-list">
                         <a href="index.html" class="footer_link" data-footer-link="1">Home</a>
                         <a href="about.html" class="footer_link" data-footer-link="2">About</a>
-                        <a href="coming-soon.html" class="footer_link" data-footer-link="3">Blog</a>
-                        <a href="contact-us.html" class="footer_link" data-footer-link="4">Contact Us</a>
+                        <a href="services.html" class="footer_link" data-footer-link="3">Services</a>
+                        <a href="coming-soon.html" class="footer_link" data-footer-link="4">Blog</a>
+                        <a href="contact-us.html" class="footer_link" data-footer-link="5">Contact Us</a>
                      </div>
                 </div>
             </section>
