Added list of deliverables
UX, UI Design, Dev, Support

--- a/services.html
+++ b/services.html
@@ -35,8 +35,70 @@
             </div>
             <div class="content-container">
                 <h2>Our services</h2>
+                <p>We build apps, products and experiences that represent you. Your product. Your company. Your audience.</p>
             </div>
-    
+            <section class="component component-text">
+                    <div class="deliverables-title">
+                        <h2>Deliverables</h2>
+                    </div>
+            </section>
+            <section class="component component-page">
+                    <div class="content-wrapper">
+                        <div class="body-text">
+                            <ul>
+                                <li class="header">User Experience(UX)</li>
+                                <li>User Flows</li>
+                                <li>Multi-device Wireframes</li>
+                                <li>Invision Prototypes</li>
+                                <li>Brand style guides</li>
+                                <li>Information Architecture</li>
+                            </ul>
+                        </div>
+                    </div>
+            </section>
+            <section class="component component-page">
+                <div class="content-wrapper">
+                    <div class="body-text">
+                        <ul>
+                            <li class="header">UI Design</li>
+                            <li>Mobile & Emerging Platforms</li>
+                            <li>Graphic Design & Illustration</li>
+                            <li>Logo & Icon Design</li>
+                            <li>Content Production</li>
+                            <li>Brand Identity</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="component component-page">
+                <div class="content-wrapper">
+                    <div class="body-text">
+                        <ul>
+                            <li class="header">Development</li>
+                            <li>Mobile Web & Native Apps</li>
+                            <li>Platform & CMS Integration</li>
+                            <li>E-Commerce</li>
+                            <li>Analytics & Kpi integration</li>
+                            <li>Full Stack Responsive Design</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="component component-page">
+                <div class="content-wrapper">
+                    <div class="body-text">
+                        <ul>
+                            <li class="header">Support</li>
+                            <li>Ongoing Maintenance</li>
+                            <li>Uptime monitoring</li>
+                            <li>Plugin & Security Updates</li>
+                            <li>Analytics Reporting</li>
+                            <li>Emergency Availability</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
