Added Bootstrap, Create grid system

--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
@@ -42,63 +43,66 @@
                         <h2>Deliverables</h2>
                     </div>
             </section>
-            <section class="component component-page">
-                    <div class="content-wrapper">
-                        <div class="body-text">
-                            <ul>
-                                <li class="header">User Experience(UX)</li>
-                                <li>User Flows</li>
-                                <li>Multi-device Wireframes</li>
-                                <li>Invision Prototypes</li>
-                                <li>Brand style guides</li>
-                                <li>Information Architecture</li>
-                            </ul>
+            <div class="container">
+                <div class="row">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="content-wrapper">
+                                    <div class="body-text">
+                                        <ul>
+                                            <li class="header">User Experience(UX)</li>
+                                            <li>User Flows</li>
+                                            <li>Multi-device Wireframes</li>
+                                            <li>Invision Prototypes</li>
+                                            <li>Brand style guides</li>
+                                            <li>Information Architecture</li>
+                                        </ul>
+                                    </div>
+                                </div>
                         </div>
-                    </div>
-            </section>
-            <section class="component component-page">
-                <div class="content-wrapper">
-                    <div class="body-text">
-                        <ul>
-                            <li class="header">UI Design</li>
-                            <li>Mobile & Emerging Platforms</li>
-                            <li>Graphic Design & Illustration</li>
-                            <li>Logo & Icon Design</li>
-                            <li>Content Production</li>
-                            <li>Brand Identity</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section class="component component-page">
-                <div class="content-wrapper">
-                    <div class="body-text">
-                        <ul>
-                            <li class="header">Development</li>
-                            <li>Mobile Web & Native Apps</li>
-                            <li>Platform & CMS Integration</li>
-                            <li>E-Commerce</li>
-                            <li>Analytics & Kpi integration</li>
-                            <li>Full Stack Responsive Design</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section class="component component-page">
-                <div class="content-wrapper">
-                    <div class="body-text">
-                        <ul>
-                            <li class="header">Support</li>
-                            <li>Ongoing Maintenance</li>
-                            <li>Uptime monitoring</li>
-                            <li>Plugin & Security Updates</li>
-                            <li>Analytics Reporting</li>
-                            <li>Emergency Availability</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            
+                        <div class="">
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="body-text">
+                                    <ul>
+                                        <li class="header">UI Design</li>
+                                        <li>Mobile & Emerging Platforms</li>
+                                        <li>Graphic Design & Illustration</li>
+                                        <li>Logo & Icon Design</li>
+                                        <li>Content Production</li>
+                                        <li>Brand Identity</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="content-wrapper">
+                                <div class="body-text">
+                                    <ul>
+                                        <li class="header">Development</li>
+                                        <li>Mobile Web & Native Apps</li>
+                                        <li>Platform & CMS Integration</li>
+                                        <li>E-Commerce</li>
+                                        <li>Analytics & Kpi integration</li>
+                                        <li>Full Stack Responsive Design</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="content-wrapper">
+                                <div class="body-text">
+                                    <ul>
+                                        <li class="header">Support</li>
+                                        <li>Ongoing Maintenance</li>
+                                        <li>Uptime monitoring</li>
+                                        <li>Plugin & Security Updates</li>
+                                        <li>Analytics Reporting</li>
+                                        <li>Emergency Availability</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                </div>      
+            </div>           
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
