Center everything, format text

--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
-        <div class="container">
+        <div class="services-container">
                 <nav>
                     <input type="checkbox" id="nav" class="hidden">
                     <label for="nav" class="nav-btn">
@@ -34,22 +34,26 @@
                     
                 </nav>
             </div>
-            <div class="content-container">
-                <h2>Our services</h2>
-                <p>We build apps, products and experiences that represent you. Your product. Your company. Your audience.</p>
+            <div class="container" style="margin-top:50px;">
+                <div class="row">
+                        <div class="col-md-12 center-text">
+                            <h2>Our services</h2>
+                            <p>We build apps, products and experiences that represent you. Your product. Your company. Your audience.</p>
+                        </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 deliverables-title center-text">   
+                        <h2>Deliverables</h2>      
+                    </div>            
+                </div>
             </div>
-            <section class="component component-text">
-                    <div class="deliverables-title">
-                        <h2>Deliverables</h2>
-                    </div>
-            </section>
             <div class="container">
                 <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-12">
                                 <div class="content-wrapper">
                                     <div class="body-text">
                                         <ul>
-                                            <li class="header">User Experience(UX)</li>
+                                            <li class="header">User Experience (UX)</li>
                                             <li>User Flows</li>
                                             <li>Multi-device Wireframes</li>
                                             <li>Invision Prototypes</li>
@@ -64,8 +68,8 @@
                                 <div class="body-text">
                                     <ul>
                                         <li class="header">UI Design</li>
-                                        <li>Mobile & Emerging Platforms</li>
-                                        <li>Graphic Design & Illustration</li>
+                                        <li>Mobile Platforms</li>
+                                        <li>Graphic Design</li>
                                         <li>Logo & Icon Design</li>
                                         <li>Content Production</li>
                                         <li>Brand Identity</li>
@@ -79,10 +83,10 @@
                                     <ul>
                                         <li class="header">Development</li>
                                         <li>Mobile Web & Native Apps</li>
-                                        <li>Platform & CMS Integration</li>
+                                        <li>Platform Integration</li>
                                         <li>E-Commerce</li>
-                                        <li>Analytics & Kpi integration</li>
-                                        <li>Full Stack Responsive Design</li>
+                                        <li>Analytics Integration</li>
+                                        <li>Responsive Design</li>
                                     </ul>
                                 </div>
                             </div>
