Form for contact page
Not ready yet, I've commented everything

--- a/contact-us.html
+++ b/contact-us.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
-        <div class="container">
+        <div class="contact-container">
                 <nav>
                     <input type="checkbox" id="nav" class="hidden">
                     <label for="nav" class="nav-btn">
@@ -37,6 +38,38 @@
         <h2>We help brands all over the world to create impressive products.</h2>
         <p>Let's chat about your next project.</p>
     </div>
+    <!-- <div class="container">
+        <div class="row">
+            <div class="col-xs-12-col-sm-12 col-md-12 col-lg-12 text-center">
+                <h2>Contact Us</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-3>
+                <form id="contact-form" class="form" action="#" method="POST" role="form">
+                    <div class="form-group">
+                        <label class="form-label" for="name">Your name</label>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Your name" tabindex="1" required>
+                    </div>
+                    <div class="form-group">
+                        <label  class="form-label" for="email">Your email</label>
+                        <input type="text" class="form-control" id="message" name="email" placeholder="Your email" tabindex="2" required>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label" for="subject">Subject</label>
+                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" tabindex="3" required>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label" for="message">Message</label>
+                        <textarea name="message" id="message" cols="50" rows="5" placeholder="Message..."  tabindex="4" required></textarea>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-start-order">Send Message</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div> -->
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
