Blockchain services added to deliverables list

--- a/services.html
+++ b/services.html
@@ -95,12 +95,12 @@
                             <div class="content-wrapper">
                                 <div class="body-text">
                                     <ul>
-                                        <li class="header">Support</li>
-                                        <li>Ongoing Maintenance</li>
-                                        <li>Uptime monitoring</li>
-                                        <li>Plugin & Security Updates</li>
-                                        <li>Analytics Reporting</li>
-                                        <li>Emergency Availability</li>
+                                        <li class="header">Blockchain</li>
+                                        <li>dApp Development</li>
+                                        <li>Smart Contracts Audit</li>
+                                        <li>MVP Prototyping</li>
+                                        <li>Token Issuing</li>
+                                        <li>Wallet Services</li>
                                     </ul>
                                 </div>
                             </div>
