--- a/contact-us.html
+++ b/contact-us.html
@@ -34,42 +34,30 @@
                     
                 </nav>
             </div>
-    <div class="content-container">
-        <h2>We help brands all over the world to create impressive products.</h2>
-        <p>Let's chat about your next project.</p>
+    <div class="container">
+        <div class="row" style="margin-top:20vh;">
+            <div class="col-md-3 offset-md-3"></div> 
+            <div class="col-md-6">
+                <h2>We help brands all over the world to create impressive products.</h2>
+            </div>
+            <div class="col-md-3 offset-md-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 offset-md-3"></div>
+            <div class="col-md-6"><p>Let's chat about your next project.</p></div>
+            <div class="col-md-3 offset-md-3"></div>
+        </div> 
+        <div class="row">
+            <div class="col-md-3 offset-md-3"></div>
+            <div class="col-md-6">
+                    <div class="lead">
+                            <h3>Try anonymously.</h3>
+                            <a type="button" href="#" class="btn btn-lg btn-primary" style="min-width: 200px;">Start your project</a>
+                    </div>
+            </div>
+            <div class="col-md-3 offset-md-3"></div>
+        </div>
     </div>
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-xs-12-col-sm-12 col-md-12 col-lg-12 text-center">
-                <h2>Contact Us</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xs-offset-3>
-                <form id="contact-form" class="form" action="#" method="POST" role="form">
-                    <div class="form-group">
-                        <label class="form-label" for="name">Your name</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Your name" tabindex="1" required>
-                    </div>
-                    <div class="form-group">
-                        <label  class="form-label" for="email">Your email</label>
-                        <input type="text" class="form-control" id="message" name="email" placeholder="Your email" tabindex="2" required>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-label" for="subject">Subject</label>
-                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" tabindex="3" required>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-label" for="message">Message</label>
-                        <textarea name="message" id="message" cols="50" rows="5" placeholder="Message..."  tabindex="4" required></textarea>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-start-order">Send Message</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div> -->
     <footer class="footer">
         <nav class="footer_nav">
             <section class="footer_col footer_col-intro">
