Alingment for contact button

--- a/contact-us.html
+++ b/contact-us.html
@@ -44,14 +44,9 @@
         </div>
         <div class="row">
             <div class="col-md-3 offset-md-3"></div>
-            <div class="col-md-6"><p>Let's chat about your next project.</p></div>
-            <div class="col-md-3 offset-md-3"></div>
-        </div> 
-        <div class="row">
-            <div class="col-md-3 offset-md-3"></div>
             <div class="col-md-6">
-                    <div class="lead">
-                            <h3>Try anonymously.</h3>
+                    <div class="lead text-center">
+                            <p>Let's chat about your new project.</p>
                             <a type="button" href="#" class="btn btn-lg btn-primary" style="min-width: 200px;">Start your project</a>
                     </div>
             </div>
