Change in font awesome link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" /> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
-    <link rel="stylesheet" href="fontawesome/css/fontawesome.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="fontawesome/css/fontawesome.css" /> -->
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 <body>
@@ -153,7 +154,7 @@
             </div>
             <div class="quote">
                 <i class="icon icon-quote-left" aria-hidden="true"></i>
-                <span>HackMD is created by engineers for engineers,<br>we are here to improve your life.</span>
+                <span>We help brands all over the world to create impressive products.</span>
                 <i class="icon icon-quote-right" aria-hidden="true"></i>
             </div>       
     </span>
